# Timetable

./: .gitignore  CMakeLists.txt  tmp
backend/: CMakeLists.txt
backend/abstract_classes/: abstract_genetic_pool.cpp  abstract_genetic_pool.hpp  abstract_specimen.cpp  abstract_specimen.hpp  mark.cpp  mark.hpp
backend/basic_instances/: course_instance.cpp  course_instance.hpp  pitem_instance.cpp  pitem_instance.hpp
backend/common/: common_types.hpp  id_types.hpp
backend/genetic_pool_instances/: genetic_pool_alpha.cpp  genetic_pool_alpha.hpp  genetic_pool_species.cpp  genetic_pool_species.hpp
backend/shared_data/: shared_data.cpp  shared_data.hpp  shared_instances.cpp  shared_instances.hpp
backend/specimen_instances/: specimen_alpha.cpp  specimen_alpha.hpp
backend/templates/: template_class.cpp  template_class.hpp  template_planning_item.cpp  template_planning_item.hpp
frontend/: CMakelists.txt
frontend/Qt/: CMakeLists.txt
frontend/Qt/application/: application.hpp
frontend/Qt/main_window/: main_window.hpp
sql/: sqldb.mwb  sqldb.mwb.bak
src/: CMakeLists.txt  application.cpp  main.cpp
